--- a/desktop-base-14.1-64bit/ChangeLog.txt
+++ b/desktop-base-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Wed Dec 18 09:57:51 CET 2013
+mozilla-firefox-l10n-24.2.0-x86_64-1_microlinux.txz: Upgraded.
+mozilla-thunderbird-l10n-24.2.0-x86_64-1_microlinux.txz: Upgraded.
++---------------------------+
 Tue Dec 17 08:21:18 CET 2013
 sbopkg-0.37.0-noarch-1_microlinux.txz: Upgraded.
 +---------------------------+
