--- a/desktop-mate-14.1-32bit/ChangeLog.txt
+++ b/desktop-mate-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,13 @@
+Wed Dec 18 16:42:43 CET 2013
+gst-ffmpeg-0.10.13-i486-1_microlinux.txz: Added.
+gst-plugins-bad-0.10.23-i486-1_microlinux.txz: Added.
+gst-plugins-ugly-0.10.19-i486-1_microlinux.txz: Added.
+totem-pl-parser-3.4.5-i486-1_microlinux.txz: Added.
+libburn-1.3.4-i486-1_microlinux.txz: Added.
+libisofs-1.3.4-i486-1_microlinux.txz: Added.
+libisoburn-1.3.4-i486-1_microlinux.txz: Added.
+brasero-2.32.1-i486-1_microlinux.txz: Added.
++---------------------------+
 Wed Dec 18 13:14:11 CET 2013
 compiz-bcop-0.8.8-i486-1_microlinux.txz: Added.
 pysetuptools-0.9.8-i486-1_microlinux.txz: Added.
