--- a/desktop-mate-14.1-64bit/ChangeLog.txt
+++ b/desktop-mate-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,13 @@
+Wed Dec 18 17:04:41 CET 2013
+gst-ffmpeg-0.10.13-x86_64-1_microlinux.txz: Added.
+gst-plugins-bad-0.10.23-x86_64-1_microlinux.txz: Added.
+gst-plugins-ugly-0.10.19-x86_64-1_microlinux.txz: Added.
+totem-pl-parser-3.4.5-x86_64-1_microlinux.txz: Added.
+libburn-1.3.4-x86_64-1_microlinux.txz: Added.
+libisofs-1.3.4-x86_64-1_microlinux.txz: Added.
+libisoburn-1.3.4-x86_64-1_microlinux.txz: Added.
+brasero-2.32.1-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Wed Dec 18 13:25:48 CET 2013
 compiz-bcop-0.8.8-x86_64-1_microlinux.txz: Added.
 pysetuptools-0.9.8-x86_64-1_microlinux.txz: Added.
