--- a/desktop-xfce-14.1-32bit/ChangeLog.txt
+++ b/desktop-xfce-14.1-32bit/ChangeLog.txt
@@ -5,5 +5,6 @@ aero-1.0-noarch-1_microlinux.txz: Added.
 xfwm4-theme-axe-1.0-noarch-1_microlinux.txz: Added.
 libgnomecanvas-2.30.3-i486-1_microlinux.txz: Added.
 gdm-2.20.11-i486-1_microlinux.txz: Added.
+faenza-icon-theme-1.3-noarch-1_microlinux.txz: Added.
 user-settings-xfce-1.0-noarch-1_microlinux.txz: Added.
 +---------------------------+
