--- a/desktop-xfce-14.1-32bit/ChangeLog.txt
+++ b/desktop-xfce-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,17 @@
+Thu Dec 19 13:21:14 CET 2013
+compiz-bcop-0.8.8-i486-1_microlinux.txz: Added.
+pysetuptools-0.9.8-i486-1_microlinux.txz: Added.
+protobuf-2.5.0-i486-1_microlinux.txz: Added.
+libcompizconfig-0.8.8-i486-1_microlinux.txz: Added.
+compizconfig-python-0.8.4-i486-1_microlinux.txz: Added.
+ccsm-0.8.4-i486-1_microlinux.txz: Added.
+compiz-plugins-main-0.8.8-i486-1_microlinux.txz: Added.
+compiz-plugins-extra-0.8.8-i486-1_microlinux.txz: Added.
+emerald-0.8.8-i486-1_microlinux.txz: Added.
+emerald-themes-0.6.0-i486-1_microlinux.txz: Added.
+fusion-icon-20080213-i486-1_microlinux.txz: Added.
+evince-3.8.3-i486-1_microlinux.txz: Added.
++---------------------------+
 Thu Dec 19 08:33:47 CET 2013
 libunique-1.1.6-i486-1_microlinux.txz: Added.
 gst-ffmpeg-0.10.13-i486-1_microlinux.txz: Added.
