--- a/desktop-xfce-14.1-64bit/ChangeLog.txt
+++ b/desktop-xfce-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,17 @@
+Thu Dec 19 13:37:45 CET 2013
+compiz-bcop-0.8.8-x86_64-1_microlinux.txz: Added.
+pysetuptools-0.9.8-x86_64-1_microlinux.txz: Added.
+protobuf-2.5.0-x86_64-1_microlinux.txz: Added.
+libcompizconfig-0.8.8-x86_64-1_microlinux.txz: Added.
+compizconfig-python-0.8.4-x86_64-1_microlinux.txz: Added.
+ccsm-0.8.4-x86_64-1_microlinux.txz: Added.
+compiz-plugins-main-0.8.8-x86_64-1_microlinux.txz: Added.
+compiz-plugins-extra-0.8.8-x86_64-1_microlinux.txz: Added.
+emerald-0.8.8-x86_64-1_microlinux.txz: Added.
+emerald-themes-0.6.0-x86_64-1_microlinux.txz: Added.
+fusion-icon-20080213-x86_64-1_microlinux.txz: Added.
+evince-3.8.3-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Thu Dec 19 08:45:19 CET 2013
 libunique-1.1.6-x86_64-1_microlinux.txz: Added.
 gst-ffmpeg-0.10.13-x86_64-1_microlinux.txz: Added.
