--- a/desktop-xfce-14.1-64bit/ChangeLog.txt
+++ b/desktop-xfce-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,18 @@
+Thu Dec 19 13:42:51 CET 2013
+catfish-0.3.2-noarch-1_microlinux.txz: Added.
+libgnomecups-0.2.3-x86_64-1_microlinux.txz: Added.
+libgnomeprint-2.18.8-x86_64-1_microlinux.txz: Added.
+libgnomeprintui-2.18.6-x86_64-1_microlinux.txz: Added.
+leafpad-0.8.18.1-x86_64-1_microlinux.txz: Added.
+galculator-2.1.2-x86_64-1_microlinux.txz: Added.
+xfce4-xkb-plugin-0.5.6-x86_64-1_microlinux.txz: Added.
+xarchiver-0.5.2-x86_64-1_microlinux.txz: Added.
+thunar-archive-plugin-0.3.0-x86_64-1_microlinux.txz: Added.
+gthumb-3.2.4-x86_64-1_microlinux.txz: Added.
+simple-scan-2.32.0.2-x86_64-1_microlinux.txz: Added.
+asunder-2.3-x86_64-1_microlinux.txz: Added.
+gcolor2-0.4-x86_64-1_microlinux.txz: Added.
++---------------------------+
 Thu Dec 19 13:37:45 CET 2013
 compiz-bcop-0.8.8-x86_64-1_microlinux.txz: Added.
 pysetuptools-0.9.8-x86_64-1_microlinux.txz: Added.
