--- a/MLED-14.0-32bit/ChangeLog.txt
+++ b/MLED-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,24 @@
+Tue Dec 24 09:19:59 CET 2013
+l/a52dec-0.7.4-i486-2_microlinux.txz: Added.
+l/celt-0.11.3-i486-2_microlinux.txz: Added.
+ap/dirac-1.0.2-i486-2_microlinux.txz: Added.
+ap/faad2-2.7-i486-2_microlinux.txz: Added.
+l/flash-player-plugin-11.2.202.310-i386-1_microlinux.txz: Added.
+l/frei0r-1.3-i486-2_microlinux.txz: Added.
+l/gsm-1.0.13-i486-2_microlinux.txz: Added.
+l/gst-ffmpeg-0.10.13-i486-2_microlinux.txz: Added.
+ap/lame-3.99.5-i486-2_microlinux.txz: Added.
+l/libavc1394-0.5.3-i486-3_microlinux.txz: Added.
+l/libaacs-0.6.0-i486-1_microlinux.txz: Added.
+l/libbluray-0.2.3-i486-2_microlinux.txz: Added.
+l/libcdaudio-0.99.12p2-i486-2_microlinux.txz: Added.
+l/libcuefile-r453-i486-2_microlinux.txz: Added.
+l/libdc1394-2.2.0-i486-2_microlinux.txz: Added.
+l/libdca-0.0.5-i486-2_microlinux.txz: Added.
+l/libdv-1.0.0-i486-2_microlinux.txz: Added.
+l/libdvdcss-1.2.11-i486-2_microlinux.txz: Added.
+l/libdvdnav-4.2.0-i486-2_microlinux.txz: Added.
++---------------------------+
 Mon Dec 23 17:04:27 CET 2013
 ap/user-settings-console-1.0-noarch-2_microlinux.txz: Added.
 ap/sbopkg-0.36.0-noarch-2_microlinux.txz: Added.
