--- a/MLED-14.0-64bit/ChangeLog.txt
+++ b/MLED-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,38 @@
+Tue Dec 24 10:27:35 CET 2013
+l/libiec61883-1.2.0-x86_64-3_microlinux.txz: Added.
+l/libkate-0.4.1-x86_64-2_microlinux.txz: Added.
+l/libmms-0.6.2-x86_64-2_microlinux.txz: Added.
+l/libmodplug-0.8.8.4-x86_64-2_microlinux.txz: Added.
+l/libmp4v2-2.0.0-x86_64-2_microlinux.txz: Added.
+l/libmusicbrainz-2.1.5-x86_64-2_microlinux.txz: Added.
+l/libreplaygain-r453-x86_64-2_microlinux.txz: Added.
+l/libvpx-1.1.0-x86_64-2_microlinux.txz: Added.
+l/live555-2011.12.23-x86_64-2_microlinux.txz: Added.
+ap/mjpegtools-2.0.0-x86_64-2_microlinux.txz: Added.
+l/mplayer-codecs-20071007-x86_64-4_microlinux.txz: Added.
+l/OpenAL-1.15.1-x86_64-1_microlinux.txz: Added.
+ap/opencore-amr-0.1.2-x86_64-2_microlinux.txz: Added.
+l/openjpeg-1.5.1-x86_64-2_microlinux.txz: Added.
+l/rtmpdump-20120308_7340f6d-x86_64-2_microlinux.txz: Added.
+l/soundtouch-1.6.0-x86_64-2_microlinux.txz: Added.
+ap/speex-1.2rc1-x86_64-2_microlinux.txz: Added.
+ap/twolame-0.3.13-x86_64-2_microlinux.txz: Added.
+ap/vcdimager-0.7.23-x86_64-2_microlinux.txz: Added.
+l/x264-20120804-x86_64-2_microlinux.txz: Added.
+l/xvidcore-1.3.2-x86_64-2_microlinux.txz: Added.
+ap/faac-1.28-x86_64-3_microlinux.txz: Added.
+l/libass-0.10.1-x86_64-2_microlinux.txz: Added.
+l/libshout-2.2.2-x86_64-2_microlinux.txz: Added.
+l/schroedinger-1.0.11-x86_64-2_microlinux.txz: Added.
+ap/ffmpeg-0.11.1-x86_64-3_microlinux.txz: Added.
+l/libquicktime-1.2.4-x86_64-2_microlinux.txz: Added.
+l/mlt-0.8.8-x86_64-2_microlinux.txz: Added.
+ap/musepack-tools-r435-x86_64-2_microlinux.txz: Added.
+l/gst-plugins-bad-0.10.23-x86_64-2_microlinux.txz: Added.
+l/gst-plugins-ugly-0.10.19-x86_64-2_microlinux.txz: Added.
+l/libmpeg2-0.5.1-x86_64-2_microlinux.txz: Added.
+ap/transcode-1.1.7-x86_64-2_microlinux.txz: Added.
++---------------------------+
 Tue Dec 24 09:19:59 CET 2013
 l/a52dec-0.7.4-x86_64-2_microlinux.txz
 l/celt-0.11.3-x86_64-2_microlinux.txz
