--- a/MLED-14.0-32bit/ChangeLog.txt
+++ b/MLED-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,14 @@
+Tue Dec 24 13:02:02 CET 2013
+x/google-droid-fonts-20100409-noarch-2_microlinux.txz: Added.
+x/webcore-fonts-3.0-noarch-4_microlinux.txz: Added.
+x/eurostile-fonts-1.0-noarch-2_microlinux.txz: Added.
+xfce/slack-wallpapers-0.212-noarch-3_microlinux.txz: Added.
+xfce/microlinux-wallpapers-1.0-noarch-3_microlinux.txz: Added.
+l/libmusicbrainz-2.1.5-i486-2_microlinux.txz: Added.
+xap/openoffice-4.0.1_en_US-i586-2_microlinux.txz: Added.
+xap/openoffice-langpack-fr-4.0.1-i486-1_microlinux.txz: Added.
+xap/openoffice-langpack-de-4.0.1-i486-1_microlinux.txz: Added.
++---------------------------+
 Tue Dec 24 10:27:35 CET 2013
 l/libiec61883-1.2.0-i486-3_microlinux.txz: Added.
 l/libkate-0.4.1-i486-2_microlinux.txz: Added.
