--- a/MLED-14.0-64bit/ChangeLog.txt
+++ b/MLED-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,15 @@
+Tue Dec 24 16:20:32 CET 2013
+xfce/aero-1.0-noarch-2_microlinux.txz: Added.
+l/gtk-engines-2.20.2-x86_64-3_microlinux.txz: Added.
+xfce/clearlooks-phenix-theme-2.0.10-noarch-2_microlinux.txz: Added.
+xfce/faenza-icon-theme-1.3-noarch-3_microlinux.txz: Added.
+xfce/Terminal-0.6.1-x86_64-2_microlinux.txz: Added.
+xfce/xarchiver-0.5.2-x86_64-4_microlinux.txz: Added.
+xfce/thunar-archive-plugin-0.3.0-x86_64-2_microlinux.txz: Added.
+xfce/xfwm4-theme-axe-1.0-noarch-2_microlinux.txz: Added.
+xfce/xfce4-xkb-plugin-0.5.4.3-x86_64-2_microlinux.txz: Added.
+xfce/user-settings-xfce-1.0-noarch-8_microlinux.txz: Added.
++---------------------------+
 Tue Dec 24 13:24:47 CET 2013
 x/google-droid-fonts-20100409-noarch-2_microlinux.txz: Added.
 x/webcore-fonts-3.0-noarch-4_microlinux.txz: Added.
