--- a/MLES-14.0-32bit/ChangeLog.txt
+++ b/MLES-14.0-32bit/ChangeLog.txt
@@ -1,39 +1,61 @@
 Mon Dec 23 07:04:19 CET 2013
-ap/user-settings-console-1.0-noarch-4_microlinux.txz: Added.
-ap/sbopkg-0.36.0-noarch-3_microlinux.txz: Added.
-ap/recode-3.6-i486-4_microlinux.txz: Added.
-ap/unrar-4.0.7-i486-3_microlinux.txz: Added.
-ap/p7zip-9.20.1-i486-3_microlinux.txz: Added.
-ap/faad2-2.7-i486-3_microlinux.txz: Added.
-ap/lame-3.99.5-i486-3_microlinux.txz: Added.
-l/libcuefile-r453-i486-3_microlinux.txz: Added.
-l/libmms-0.6.2-i486-3_microlinux.txz: Added.
-l/libmp4v2-2.0.0-i486-3_microlinux.txz: Added.
-l/libreplaygain-r453-i486-3_microlinux.txz: Added.
-ap/speex-1.2rc1-i486-3_microlinux.txz: Added.
-ap/twolame-0.3.13-i486-3_microlinux.txz: Added.
-ap/faac-1.28-i486-4_microlinux.txz: Added.
-ap/ffmpeg-0.11.1-i486-4_microlinux.txz: Added.
-ap/musepack-tools-r435-i486-3_microlinux.txz: Added.
-l/libshout-2.2.2-i486-3_microlinux.txz: Added.
-n/mpd-0.17.1-i486-3_microlinux.txz: Added.
-n/icecast-2.3.2-i486-4_microlinux.txz: Added.
-l/libmpdclient-2.7-i486-3_microlinux.txz: Added.
-n/ncmpc-0.16-i486-3_microlinux.txz: Added.
-l/libsigc++-2.2.10-i486-3_microlinux.txz: Added.
-l/libtorrent-0.13.0-i486-3_microlinux.txz: Added.
-n/rtorrent-0.9.0-i486-4_microlinux.txz: Added.
-n/squid-3.1.20-i486-3_microlinux.txz: Added.
-n/squidGuard-1.4-i486-3_microlinux.txz: Added.
-n/postfix-2.9.7-i486-3_microlinux.txz: Added.
-n/dovecot-2.1.17-i486-3_microlinux.txz: Added.
-ap/pwgen-2.06-i486-3_microlinux.txz: Added.
-d/perl-IO-Multiplex-1.13-i486-3_microlinux.txz: Added.
-d/perl-digest-sha1-2.13-i486-3_microlinux.txz: Added.
-d/perl-digest-hmac-1.03-i486-3_microlinux.txz: Added.
-d/perl-net-ip-1.26-i486-3_microlinux.txz: Added.
-d/perl-net-dns-0.72-i486-3_microlinux.txz: Added.
-d/perl-Net-Server-2.007-i486-3_microlinux.txz: Added.
-d/perl-BerkeleyDB-0.52-i486-3_microlinux.txz: Added.
-n/postgrey-1.34-i486-3_microlinux.txz: Added.
+
+Microlinux Enterprise Server 14.0 32-bit released! This is an LTS release,
+which means packages will be maintained for as long as the underlying Slackware
+system is officially supported.
+
+MLES 14.0 32-bit provides the following extra software:
+
+AP
+|-- p7zip
+|-- pwgen
+|-- recode
+|-- sbopkg
+`-- unrar
+
+D
+|-- perl-BerkeleyDB
+|-- perl-digest-hmac
+|-- perl-digest-sha1
+|-- perl-IO-Multiplex
+|-- perl-net-dns
+|-- perl-net-ip
+`-- perl-Net-Server
+
+L
+|-- libmpdclient
+|-- libsigc++
+`-- libtorrent
+
+MULTIMEDIA
+|-- faac
+|-- faad2
+|-- ffmpeg
+|-- lame
+|-- libcuefile
+|-- libmms
+|-- libmp4v2
+|-- libreplaygain
+|-- libshout
+|-- musepack-tools
+|-- speex
+`-- twolame
+
+N
+|-- dovecot
+|-- icecast
+|-- mpd
+|-- ncmpc
+|-- postfix
+|-- postgrey
+|-- rtorrent
+|-- squid
+`-- squidGuard
+
+PROFILE
+`-- user-settings-console
+
+Have fun,
+
+Niki Kovacs <info@microlinux.fr>
 +---------------------------+
