--- a/MLED-14.0-64bit/ChangeLog.txt
+++ b/MLED-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Thu Jan  2 15:32:04 CET 2014
+l/podofo-0.9.2-x86_64-1_microlinux.txz: Added.
+xap/scribus-1.4.3-x86_64-1_microlinux.txz: Added.
++--------------------------+
 Mon Dec 30 14:21:30 CET 2013
 Microlinux Enterprise Desktop 14.0 64-bit released! This is an LTS release,
 which means packages will be maintained for as long as the underlying Slackware
