--- a/MLED-14.0-64bit/ChangeLog.txt
+++ b/MLED-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Sat Dec 28 13:02:45 CET 2013
+locale/mozilla-thunderbird-l10n-17.0.11-x86_64-1_microlinux.txz: Upgraded.
++--------------------------+
 Thu Jan  2 15:32:04 CET 2014
 l/podofo-0.9.2-x86_64-1_microlinux.txz: Added.
 xap/scribus-1.4.3-x86_64-1_microlinux.txz: Added.
