--- a/MLED-14.0-32bit/ChangeLog.txt
+++ b/MLED-14.0-32bit/ChangeLog.txt
@@ -1,103 +1,204 @@
-Tue Dec 24 15:24:04 CET 2013
-xfce/aero-1.0-noarch-2_microlinux.txz: Added.
-l/gtk-engines-2.20.2-i486-3_microlinux.txz: Added.
-xfce/clearlooks-phenix-theme-2.0.10-noarch-2_microlinux.txz: Added.
-xfce/faenza-icon-theme-1.3-noarch-3_microlinux.txz: Added.
-xfce/Terminal-0.6.1-i486-2_microlinux.txz: Added.
-xfce/xarchiver-0.5.2-i486-4_microlinux.txz: Added.
-xfce/thunar-archive-plugin-0.3.0-i486-2_microlinux.txz: Added.
-xfce/xfwm4-theme-axe-1.0-noarch-2_microlinux.txz: Added.
-xfce/xfce4-xkb-plugin-0.5.4.3-i486-2_microlinux.txz: Added.
-xfce/user-settings-xfce-1.0-noarch-8_microlinux.txz: Added.
-+---------------------------+
-Tue Dec 24 13:02:02 CET 2013
-x/google-droid-fonts-20100409-noarch-2_microlinux.txz: Added.
-x/webcore-fonts-3.0-noarch-4_microlinux.txz: Added.
-x/eurostile-fonts-1.0-noarch-2_microlinux.txz: Added.
-xfce/slack-wallpapers-0.212-noarch-3_microlinux.txz: Added.
-xfce/microlinux-wallpapers-1.0-noarch-3_microlinux.txz: Added.
-l/libmusicbrainz3-3.0.3-i486-2_microlinux.txz: Added.
-xap/openoffice-4.0.1_en_US-i586-2_microlinux.txz: Added.
-xap/openoffice-langpack-fr-4.0.1-i486-1_microlinux.txz: Added.
-xap/openoffice-langpack-de-4.0.1-i486-1_microlinux.txz: Added.
-+---------------------------+
-Tue Dec 24 10:27:35 CET 2013
-l/libiec61883-1.2.0-i486-3_microlinux.txz: Added.
-l/libkate-0.4.1-i486-2_microlinux.txz: Added.
-l/libmms-0.6.2-i486-2_microlinux.txz: Added.
-l/libmodplug-0.8.8.4-i486-2_microlinux.txz: Added.
-l/libmp4v2-2.0.0-i486-2_microlinux.txz: Added.
-l/libmusicbrainz-2.1.5-i486-2_microlinux.txz: Added.
-l/libreplaygain-r453-i486-2_microlinux.txz: Added.
-l/libvpx-1.1.0-i486-2_microlinux.txz: Added.
-l/live555-2011.12.23-i486-2_microlinux.txz: Added.
-ap/mjpegtools-2.0.0-i486-2_microlinux.txz: Added.
-l/mplayer-codecs-20071007-i486-4_microlinux.txz: Added.
-l/OpenAL-1.15.1-i486-1_microlinux.txz: Added.
-ap/opencore-amr-0.1.2-i486-2_microlinux.txz: Added.
-l/openjpeg-1.5.1-i486-2_microlinux.txz: Added.
-l/rtmpdump-20120308_7340f6d-i486-2_microlinux.txz: Added.
-l/soundtouch-1.6.0-i486-2_microlinux.txz: Added.
-ap/speex-1.2rc1-i486-2_microlinux.txz: Added.
-ap/twolame-0.3.13-i486-2_microlinux.txz: Added.
-ap/vcdimager-0.7.23-i486-2_microlinux.txz: Added.
-l/x264-20120804-i486-2_microlinux.txz: Added.
-l/xvidcore-1.3.2-i486-2_microlinux.txz: Added.
-ap/faac-1.28-i486-3_microlinux.txz: Added.
-l/libass-0.10.1-i486-2_microlinux.txz: Added.
-l/libshout-2.2.2-i486-2_microlinux.txz: Added.
-l/schroedinger-1.0.11-i486-2_microlinux.txz: Added.
-ap/ffmpeg-0.11.1-i486-3_microlinux.txz: Added.
-l/libquicktime-1.2.4-i486-2_microlinux.txz: Added.
-l/mlt-0.8.8-i486-2_microlinux.txz: Added.
-ap/musepack-tools-r435-i486-2_microlinux.txz: Added.
-l/gst-plugins-bad-0.10.23-i486-2_microlinux.txz: Added.
-l/gst-plugins-ugly-0.10.19-i486-2_microlinux.txz: Added.
-l/libmpeg2-0.5.1-i486-2_microlinux.txz: Added.
-ap/transcode-1.1.7-i486-2_microlinux.txz: Added.
-+---------------------------+
-Tue Dec 24 09:19:59 CET 2013
-l/a52dec-0.7.4-i486-2_microlinux.txz: Added.
-l/celt-0.11.3-i486-2_microlinux.txz: Added.
-ap/dirac-1.0.2-i486-2_microlinux.txz: Added.
-ap/faad2-2.7-i486-2_microlinux.txz: Added.
-l/flash-player-plugin-11.2.202.310-i386-1_microlinux.txz: Added.
-l/frei0r-1.3-i486-2_microlinux.txz: Added.
-l/gsm-1.0.13-i486-2_microlinux.txz: Added.
-l/gst-ffmpeg-0.10.13-i486-2_microlinux.txz: Added.
-ap/lame-3.99.5-i486-2_microlinux.txz: Added.
-l/libavc1394-0.5.3-i486-3_microlinux.txz: Added.
-l/libaacs-0.6.0-i486-1_microlinux.txz: Added.
-l/libbluray-0.2.3-i486-2_microlinux.txz: Added.
-l/libcdaudio-0.99.12p2-i486-2_microlinux.txz: Added.
-l/libcuefile-r453-i486-2_microlinux.txz: Added.
-l/libdc1394-2.2.0-i486-2_microlinux.txz: Added.
-l/libdca-0.0.5-i486-2_microlinux.txz: Added.
-l/libdv-1.0.0-i486-2_microlinux.txz: Added.
-l/libdvdcss-1.2.11-i486-2_microlinux.txz: Added.
-l/libdvdnav-4.2.0-i486-2_microlinux.txz: Added.
-+---------------------------+
-Mon Dec 23 17:04:27 CET 2013
-ap/user-settings-console-1.0-noarch-2_microlinux.txz: Added.
-ap/sbopkg-0.36.0-noarch-2_microlinux.txz: Added.
-ap/recode-3.6-i486-4_microlinux.txz: Added.
-ap/cdlabelgen-4.3.0-noarch-2_microlinux.txz: Added.
-ap/p7zip-9.20.1-i486-2_microlinux.txz: Added.
-ap/unrar-4.0.7-i486-2_microlinux.txz: Added.
-d/acpica-20130725-i486-1_microlinux.txz: Added.
-d/gc-7.2d-i486-2_microlinux.txz: Added.
-d/lua-5.1.5-i486-2_microlinux.txz: Added.
-d/numpy-1.6.2-i486-2_microlinux.txz: Added.
-d/orc-0.4.16-i486-2_microlinux.txz: Added.
-d/jdk-7u45-i586-1_microlinux.txz: Added.
-d/scons-2.2.0-i486-2_microlinux.txz: Added.
-l/BeautifulSoup-3.2.0-i486-2_microlinux.txz: Added.
-l/cddb-py-1.4-i486-2_microlinux.txz: Added.
-l/enca-1.14-i486-2_microlinux.txz: Added.
-l/gsl-1.16-i486-1_microlinux.txz: Added.
-l/imlib2-1.4.5-i486-2_microlinux.txz: Added.
-l/libevent-2.0.21-i486-2_microlinux.txz: Added.
-l/libburn-1.3.0-i486-1_microlinux.txz: Added.
-l/libisofs-1.3.0-i486-1_microlinux.txz: Added.
-l/libisoburn-1.3.0-i486-1_microlinux.txz: Added.
+Mon Dec 30 14:21:30 CET 2013
+Microlinux Enterprise Desktop 14.0 32-bit released! This is an LTS release,
+which means packages will be maintained for as long as the underlying Slackware
+system is officially supported.
+
+MLED 14.0 32-bit provides the following extra software:
+
+AP
+|-- cdlabelgen
+|-- p7zip
+|-- recode
+|-- sbopkg
+`-- unrar
+
+D
+|-- acpica
+|-- gc
+|-- jdk
+|-- lua
+|-- numpy
+|-- orc
+|-- perl-cairo
+|-- perl-event
+|-- perl-extutils-depends
+|-- perl-extutils-pkgconfig
+|-- perl-glib
+|-- perl-gtk2
+|-- perl-libintl
+|-- perl-pango
+`-- scons
+
+GNOME
+|-- atkmm
+|-- brasero
+|-- cairomm
+|-- dconf
+|-- evince
+|-- gdm
+|-- glibmm
+|-- gnote
+|-- goocanvas
+|-- gthumb
+|-- gtkmm
+|-- libgnomecanvas
+|-- libgnomecups
+|-- libgnomeprint
+|-- libgnomeprintui
+|-- libsigc++
+|-- libunique
+|-- mm-common
+|-- pangomm
+|-- pygoocanvas
+`-- totem-pl-parser
+
+L
+|-- BeautifulSoup
+|-- cryptopp
+|-- enca
+|-- gsl
+|-- imlib2
+|-- jbig2dec
+|-- libburn
+|-- libevent
+|-- libisoburn
+|-- libisofs
+|-- lxml
+|-- protobuf
+|-- pysetuptools
+|-- pyxdg
+|-- tolua++
+`-- wxGTK
+
+LOCALE
+|-- mozilla-firefox-l10n
+|-- mozilla-thunderbird-l10n
+`-- openoffice-langpack
+
+MULTIMEDIA
+|-- a52dec
+|-- cddb-py
+|-- celt
+|-- dirac
+|-- faac
+|-- faad2
+|-- ffmpeg
+|-- flash-player-plugin
+|-- frei0r
+|-- gsm
+|-- gst-ffmpeg
+|-- gst-plugins-bad
+|-- gst-plugins-ugly
+|-- id3lib
+|-- lame
+|-- libaacs
+|-- libass
+|-- libavc1394
+|-- libbluray
+|-- libcdaudio
+|-- libcuefile
+|-- libdc1394
+|-- libdca
+|-- libdv
+|-- libdvdcss
+|-- libdvdnav
+|-- libiec61883
+|-- libkate
+|-- libmms
+|-- libmodplug
+|-- libmp4v2
+|-- libmpeg2
+|-- libmusicbrainz
+|-- libmusicbrainz3
+|-- libquicktime
+|-- libreplaygain
+|-- libshout
+|-- libvpx
+|-- live555
+|-- lsdvd
+|-- mjpegtools
+|-- mlt
+|-- mplayer-codecs
+|-- musepack-tools
+|-- ogmtools
+|-- OpenAL
+|-- opencore-amr
+|-- openjpeg
+|-- rtmpdump
+|-- schroedinger
+|-- soundtouch
+|-- speex
+|-- subtitleripper
+|-- transcode
+|-- twolame
+|-- vcdimager
+|-- x264
+|-- xvid4conf
+`-- xvidcore
+
+N
+`-- fping
+
+PROFILE
+|-- user-settings-console
+`-- user-settings-xfce
+
+X
+|-- ccsm
+|-- compiz-bcop
+|-- compizconfig-python
+|-- compiz-plugins-extra
+|-- compiz-plugins-main
+|-- emerald
+|-- emerald-themes
+|-- eurostile-fonts
+|-- fusion-icon
+|-- google-droid-fonts
+|-- libcompizconfig
+`-- webcore-fonts
+
+XAP
+|-- aMule
+|-- asunder
+|-- audacious
+|-- audacious-plugins
+|-- audacity
+|-- catfish
+|-- conky
+|-- dvdrip
+|-- easytag
+|-- filezilla
+|-- galculator
+|-- gcolor2
+|-- gtkcdlabel
+|-- inkscape
+|-- leafpad
+|-- MPlayer
+|-- mupdf
+|-- openoffice
+|-- openshot
+|-- poedit
+|-- simple-scan
+|-- smplayer
+|-- transmission
+|-- virtualbox
+|-- virtualbox-extension-pack
+`-- virtualbox-kernel
+
+XFCE
+|-- aero
+|-- clearlooks-phenix-theme
+|-- faenza-icon-theme
+|-- gtk-engines
+|-- microlinux-wallpapers
+|-- slack-wallpapers
+|-- Terminal
+|-- thunar-archive-plugin
+|-- xarchiver
+|-- xfce4-xkb-plugin
+`-- xfwm4-theme-axe
+
+Have fun,
+
+Niki Kovacs <info@microlinux.fr>
 +---------------------------+
