--- a/MLED-14.0-32bit/ChangeLog.txt
+++ b/MLED-14.0-32bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Tue Dec 31 13:42:06 CET 2013
+locale/mozilla-thunderbird-l10n-17.0.11-i486-1_microlinux.txz: Upgraded.
++--------------------------+
 Thu Jan  2 15:32:04 CET 2014
 l/podofo-0.9.2-i486-1_microlinux.txz: Added.
 xap/scribus-1.4.3-i486-1_microlinux.txz: Added.
