--- a/MLED-14.1-64bit/ChangeLog.txt
+++ b/MLED-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,6 @@
+Tue Jan  7 12:34:32 CET 2014
+n/broadcom-sta-6.30.223.141_3.10.17-x86_64-1_microlinux.txz: Added.
++--------------------------+
 Thu Jan  2 15:32:04 CET 2014
 l/podofo-0.9.2-x86_64-1_microlinux.txz: Added.
 xap/scribus-1.4.3-x86_64-1_microlinux.txz: Added.
