--- a/MLED-14.1-32bit/ChangeLog.txt
+++ b/MLED-14.1-32bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Mon Jan 13 20:32:25 CET 2014
+locale/openoffice-langpack-hu-4.0.1-i486-1_microlinux.txz: Added.
+  Request from user aszabo on LQ.
++--------------------------+
 Tue Jan  7 12:31:15 CET 2014
 n/broadcom-sta-6.30.223.141_3.10.17_smp-i486-1_microlinux.txz: Added.
 +--------------------------+
