--- a/MLES-14.0-64bit/ChangeLog.txt
+++ b/MLES-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,8 @@
+Tue Mar  4 11:51:50 CET 2014
+l/pysetuptools-2.1-x86_64-1_microlinux.txz: Added.
+l/psutil-1.2.1-x86_64-1_microlinux.txz: Added.
+ap/glances-1.7.2-x86_64-1_microlinux.txz: Added.
++--------------------------+
 Wed Dec 25 15:33:45 CET 2013
 Microlinux Enterprise Server 14.0 64-bit released! This is an LTS release,
 which means packages will be maintained for as long as the underlying Slackware
