--- a/MLED-14.1-64bit/ChangeLog.txt
+++ b/MLED-14.1-64bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Thu Mar  6 06:52:16 CET 2014
+n/freerdp-20131115_ea18d2b-x86_64-1_microlinux.txz: Added.
+xap/remmina-20131008_26b814a-x86_64-_microlinux.txz: Added.
++--------------------------+
 Mon Feb 10 08:22:59 CET 2014
 locale/mozilla-firefox-l10n-24.3.0-x86_64-1_microlinux.txz: Upgraded.
 locale/mozilla-thunderbird-l10n-24.3.0-x86_64-1_microlinux.txz: Upgraded.
