--- a/MLED-14.0-64bit/ChangeLog.txt
+++ b/MLED-14.0-64bit/ChangeLog.txt
@@ -1,3 +1,7 @@
+Thu Mar  6 07:21:32 CET 2014
+n/freerdp-20131115_ea18d2b-x86_64-1_microlinux.txz: Added.
+xap/remmina-20131008_26b814a-x86_64-_microlinux.txz: Added.
++--------------------------+
 Tue Jan 21 10:18:04 CET 2014
 xap/winff-1.5.2-x86_64-1_microlinux.txz: Added.
 	WinFF doesn't have any particular runtime dependencies except ffmpeg, but
